Check test_matrix is non-null before transforming as JSON
Currently breaks on merge for device types without test_matrix defined.

> The template is not valid. Newtonsoft.Json.JsonReaderException: Error reading JToken from JsonReader.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -418,6 +418,7 @@ jobs:
         # the release can't be finlized
         if: |
           github.event_name == 'push' &&
+          inputs.test_matrix &&
           (
             join(fromJSON(inputs.test_matrix).test_suite) != '' ||
             join(fromJSON(inputs.test_matrix).include.*.test_suite) != ''
