--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -2238,6 +2238,7 @@ jobs:
     # this expression checks to make sure at least one test suite was provided via either matrix syntax
     if: |
       github.event_name != 'push' &&
+      inputs.test_matrix &&
       (
         join(fromJSON(inputs.test_matrix).test_suite) != '' ||
         join(fromJSON(inputs.test_matrix).include.*.test_suite) != ''
