yocto-build-deploy.yml: Search for build logs only in the location where they are produced
Fixes the following error when uploading the build logs:

Error: ELOOP: too many symbolic links encountered, stat '/home/runner/_work/balena-tm3/balena-tm3/build/tmp/work/cortexa53-crypto-poky-linux/libtool-cross/2.4.7-r0/image/false'

The logs are creatd only in specific directories so there is no point in searching for them in the entire workspace

Change-type: patch
Signed-off-by: Florin Sarbu <florin@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1034,8 +1034,8 @@ jobs:
           path: |
             balena-build.log
             build/tmp/log/**/*.log
-            build/tmp/work/**/run.*
-            build/tmp/work/**/log.*
+            build/tmp/work/*/*/*/temp/run.*
+            build/tmp/work/*/*/*/temp/log.*
 
       # If there was a cache miss for this key, save a new cache.
       # Use local S3 cache on self-hosted runners.
