Replace deprecated `balena key add` with `balena ssh-key add`
balena CLI v23.0.0 removed the `key add` alias. The AMI test
setup step still used it while the cleanup step already used
the new `ssh-key list`/`ssh-key rm` names.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1992,7 +1992,7 @@ jobs:
           # shellcheck disable=SC2046
           >&2 eval $(ssh-agent)
           >&2 ssh-add
-          balena key add "${ami_test_fleet}" "${key_file}.pub"
+          balena ssh-key add "${ami_test_fleet}" "${key_file}.pub"
 
           uuid=$(balena device register "${AMI_TEST_ORG}/${ami_test_fleet}" | awk '{print $4}')
           >&2 echo "Pre-registered device with UUID ${uuid}"
